tests/regression/error/hw5_error11.nex
var f;
fun g(x)
{
   if (x)
   {
      return anon (x) { return x + 1; };
   }
   else
   {
      return true;
   }
}
   f = g(true);
   print (f);
   print (":n");
   f = g(false);
   print (f);
   print (":n");
   f(2);
